--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,5 @@ steps:
   displayName: 'Build the project - Release'
   inputs:
     command: 'build'
-    arguments: '--no-restore --configuration 'Release'
+    arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
-
